--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,11 @@ h3.my-profession {
     transition: all 0.3s ease;
 }
 
+.auto {
+    margin: auto;
+    max-width: 1135px;
+}
+
 .service .service-item .service-item-inner:hover .icon {
     background: var(--skin-color);
 
