--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,11 @@ h3.my-profession {
     margin-bottom: 20px;
 }
 
+.contact-info-item a {
+        color: var(--text-black-700);
+        font-weight: 400;
+}
+
 .contact-sub-title {
     color: var(--text-black-900);
     text-align: center;
@@ -685,7 +690,10 @@ h3.my-profession {
     text-align: center;
     margin-bottom: 60px;
 }
-
+.info-item p a {
+    color: var(--text-black-700);
+    font-weight: 400;
+}
 .contact .contact-info-item .icon {
     display: inline-block;
 }
