--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,8 @@ h3.my-profession {
     color: var(--text-black-700);
     margin-left: 4px;
     display: inline-block;
+    width: 100%;
+    max-width: 130px;
 }
 
 .about .about-content .personal-info .buttons {
